--- a/configs/justFood.yaml
+++ b/configs/justFood.yaml
@@ -1,7 +1,37 @@
 !ArenaConfig
 arenas:
   0: !Arena
-    t: 0
+    t: 1000
+    rand_all_colors: true
+    items:
+    - !Item
+      name: GoodGoal
+      positions: []
+      rand_color: false
+      rotations: []
+      sizes: []
+  1: !Arena
+    t: 1000
+    rand_all_colors: true
+    items:
+    - !Item
+      name: GoodGoal
+      positions: []
+      rand_color: false
+      rotations: []
+      sizes: []
+  2: !Arena
+    t: 1000
+    rand_all_colors: true
+    items:
+    - !Item
+      name: GoodGoal
+      positions: []
+      rand_color: false
+      rotations: []
+      sizes: []
+  3: !Arena
+    t: 1000
     rand_all_colors: true
     items:
     - !Item
