--- a/configs/movingFood.yaml
+++ b/configs/movingFood.yaml
@@ -2,18 +2,16 @@
 arenas:
   0: !Arena
     t: 0
-    rand_all_colors: true
-    rand_all_sizes: true
     items:
     - !Item
       name: GoodGoalBounce
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
     - !Item
       name: BadGoalBounce
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
