--- a/configs/avoidance.yaml
+++ b/configs/avoidance.yaml
@@ -2,18 +2,17 @@
 arenas:
   0: !Arena
     t: 0
-    rand_all_colors: true
     items:
     - !Item
       name: GoodGoal
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
     - !Item
       name: DeathZone
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
