--- a/configs/exampleConfig.yaml
+++ b/configs/exampleConfig.yaml
@@ -2,26 +2,25 @@
 arenas:
   0: !Arena
     t: 0
-    rand_all_colors: false
     items:
     - !Item
       name: Cube
-      positions: 
+      positions:
       - !Vector3 {x: 10, y: 0, z: 10}
       - !Vector3 {x: -1, y: 0, z: 30}
-      rand_color: false
+      colors: []
       rotations: [45]
-      sizes: 
+      sizes:
       - !Vector3 {x: -1, y: 5, z: -1}
     - !Item
-      name: CylinderTunnel
+      name: Cylinder
       positions: []
-      rand_color: true
+      colors: []
       rotations: []
       sizes: []
     - !Item
       name: GoodGoal
       positions: []
-      rand_color: true
+      colors: []
       rotations: []
       sizes: []
