--- a/configs/lightsOff.yaml
+++ b/configs/lightsOff.yaml
@@ -2,44 +2,40 @@
 arenas:
   0: !Arena
     t: 100
-    rand_all_colors: true
     blackouts: [10,20,30,40,50]
     items:
     - !Item
       name: GoodGoal
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
   1: !Arena
     t: 100
-    rand_all_colors: true
     blackouts: [-5]
     items:
     - !Item
       name: GoodGoal
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
   2: !Arena
     t: 100
-    rand_all_colors: true
     items:
     - !Item
       name: GoodGoal
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
   3: !Arena
     t: 100
-    rand_all_colors: true
     blackouts: [2,4,6,8,10,12,14,16,18,20,30,40,50,60,70,80]
     items:
     - !Item
       name: GoodGoal
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
