--- a/configs/objectManipulation.yaml
+++ b/configs/objectManipulation.yaml
@@ -2,54 +2,53 @@
 arenas:
   0: !Arena
     t: 0
-    rand_all_colors: true
     items:
     - !Item
       name: GoodGoal
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
     - !Item
       name: Cube
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
     - !Item
       name: CubeTransparent
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
     - !Item
       name: Cardbox1
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
     - !Item
       name: Cardbox2
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
     - !Item
       name: WoodLog
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
     - !Item
       name: UObject
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
     - !Item
       name: LObject
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
