--- a/configs/obstacles.yaml
+++ b/configs/obstacles.yaml
@@ -2,24 +2,23 @@
 arenas:
   0: !Arena
     t: 0
-    rand_all_colors: true
     items:
     - !Item
       name: GoodGoal
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
     - !Item
       name: Wall
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
     - !Item
       name: Wall
       positions: []
-      rand_color: false
+      colors: []
       rotations: []
       sizes: []
