--- a/examples/configs/3-Obstacles.yaml
+++ b/examples/configs/3-Obstacles.yaml
@@ -9,5 +9,9 @@ arenas:
       - !Vector3 {x: 1, y: 1, z: 1}
     - !Item
       name: Wall
+      colors:
+      - !RGB {r: 153, g: 153, b: 153}
     - !Item
       name: Wall
+      colors:
+      - !RGB {r: 153, g: 153, b: 153}
