--- a/examples/configs/7-InternalMemory.yaml
+++ b/examples/configs/7-InternalMemory.yaml
@@ -11,16 +11,22 @@ arenas:
     blackouts: [-40]
     items:
     - !Item
+      name: Wall
+    - !Item
       name: GoodGoal
   2: !Arena
     t: 100
     blackouts: [50, 55, 75, 80, 100, 105, 125]
     items:
     - !Item
+      name: WallTranparent
+    - !Item
       name: GoodGoal
   3: !Arena
     t: 100
     blackouts: [25, 30, 50, 55, 75]
     items:
+    - !Item
+      name: CylinderTunnel
     - !Item
       name: GoodGoal
