--- a/env.yml
+++ b/env.yml
@@ -27,8 +27,6 @@ dependencies:
   - libtiff=4.0.10=h2733197_2
   - ncurses=6.1=he6710b0_1
   - nomkl=3.0=0
-  - numpy=1.14.6=py36hec00662_4
-  - numpy-base=1.14.6=py36h2f8d375_4
   - olefile=0.46=py36_0
   - openblas=0.3.6=0
   - openblas-devel=0.3.6=0
@@ -50,4 +48,8 @@ dependencies:
   - yaml=0.1.7=had09818_2
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
+  - pip:
+    - animalai==1.0.2
+    - gym==0.13.0
+    - numpy==1.14.5
 
