--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 env/*
 !env/README.md
+examples/submission/test_submission/env/*
+!examples/submission/test_submission/env/README.md
 models/
 summaries/
 /.idea
