--- a/neuro/configurations/training_configurations/no_vis_config.yaml
+++ b/neuro/configurations/training_configurations/no_vis_config.yaml
@@ -2,7 +2,7 @@ AnimalAI:
     trainer: ppo
     epsilon: 0.2
     lambd: 0.90
-    learning_rate: 3.0e-4
+    learning_rate: 4.0e-4
     learning_rate_schedule: linear
     memory_size: 128
     normalize: false
@@ -13,7 +13,7 @@ AnimalAI:
     time_horizon: 128
     batch_size: 64
     buffer_size: 2024
-    hidden_units: 128
+    hidden_units: 256
     num_layers: 1
     beta: 1.0e-2
     max_steps: 1.0e7
@@ -22,7 +22,7 @@ AnimalAI:
         extrinsic:
             strength: 1.0
             gamma: 0.99
-        curiosity:
-            strength: 0.01
-            gamma: 0.99
-            encoding_size: 128
+        # curiosity:
+        #     strength: 0.01
+        #     gamma: 0.99
+        #     encoding_size: 128
