--- a/neuro/configurations/curriculum4/21.yml
+++ b/neuro/configurations/curriculum4/21.yml
@@ -21,6 +21,7 @@ arenas:
       sizes:
       - !Vector3 {x: 10, y: 5, z: 2}
       rotations: [0]
-
+      colors: 
+      - !RGB {r: 153, g: 153, b: 153}
     pass_mark: 0
     t: 250
