--- a/neuro/configurations/curriculum4/25.yml
+++ b/neuro/configurations/curriculum4/25.yml
@@ -11,7 +11,9 @@ arenas:
       - !Vector3 {x: 1, y: 1, z: 1}
     - !Item
       name: Wall
-
-
+      colors: 
+      - !RGB {r: 153, g: 153, b: 153}
+      colors: 
+      - !RGB {r: 153, g: 153, b: 153}
     pass_mark: 0
     t: 250
