--- a/neuro/configurations/curriculum4/27.yml
+++ b/neuro/configurations/curriculum4/27.yml
@@ -11,10 +11,16 @@ arenas:
       - !Vector3 {x: 1, y: 1, z: 1}
     - !Item
       name: Wall
+      colors: 
+      - !RGB {r: 153, g: 153, b: 153}
     - !Item
       name: Wall
+      colors: 
+      - !RGB {r: 153, g: 153, b: 153}
     - !Item
       name: Wall
+      colors: 
+      - !RGB {r: 153, g: 153, b: 153}
 
 
     pass_mark: 0
