--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ envs/*
 # examples/models/*
 neuro/tmp/
 logs/
+summaries/
 !examples/models/self_control_curriculum_pre_trained/
 
 # Environemnt logfile
