Final commit: Readme, requirements, cleanup

--- a/neuro/requirements.txt
+++ b/neuro/requirements.txt
@@ -1,7 +1,7 @@
 animalai==2.0.0
 animalai-train==2.0.0
 clyngor==0.3.31
-xmatplotlib==3.2.1
+matplotlib==3.2.1
 opencv-python==4.3.0.36
 pandas==1.0.4
 tensorboard==1.15.0
